@@ -1,3 +1,7 @@
+1999-02-05  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* gnome-mime-info.h: Constify
+
 1999-02-06  Federico Mena Quintero  <federico@nuclecu.unam.mx>
 
 	* gnome-metadata.c (maybe_scan_app_dir): It is not necessary to
